Closed Bug 1728014 Opened 3 years ago Closed 3 years ago

[Wayland] fix FreeBSD/libc++ build by adding forgotten include to SurfacePoolWayland.h

Categories

(Core :: Graphics, defect)

Desktop
FreeBSD
defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox93 --- fixed

People

(Reporter: val, Assigned: val)

Details

Attachments

(1 file)

At some point (??) maybe only with libc++ (???) some implicit transitive include of unordered_map in SurfacePoolWayland.h went away (resulting in the usual C++ cascade of unrelated errors)

 4:34.06 In file included from Unified_cpp_gfx_layers2.cpp:11:
 4:34.06 In file included from /home/greg/src/hg.mozilla.org/mozilla-central/gfx/layers/SurfacePoolWayland.cpp:6:
 4:34.06 /home/greg/src/hg.mozilla.org/mozilla-central/obj-x86_64-unknown-freebsd14.0/dist/include/mozilla/layers/SurfacePoolWayland.h:69:8: error: no template named 'unordered_map' in namespace 'std'
 4:34.06   std::unordered_map<widget::WaylandBuffer*, SurfacePoolEntry> mInUseEntries;
 4:34.06   ~~~~~^
 4:34.07 /home/greg/src/hg.mozilla.org/mozilla-central/obj-x86_64-unknown-freebsd14.0/dist/include/mozilla/layers/SurfacePoolWayland.h:110:48: error: no viable conversion from returned value of type 'const RefPtr<mozilla::layers::SurfacePoolWayland>' to function return type 'RefPtr<mozilla::layers::SurfacePool>'
 4:34.07   RefPtr<SurfacePool> Pool() override { return mPool; }
 4:34.07                                                ^~~~~
[…]
 4:34.12 In file included from Unified_cpp_gfx_layers2.cpp:11:
 4:34.12 /home/greg/src/hg.mozilla.org/mozilla-central/gfx/layers/SurfacePoolWayland.cpp:20:10: error: no viable conversion from returned value of type 'mozilla::layers::SurfacePoolWayland *' to function return type 'RefPtr<mozilla::layers::SurfacePool>'
 4:34.12   return new SurfacePoolWayland(aPoolSizeLimit);
 4:34.12          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
…

I'll attach the one-liner here

Assignee: nobody → greg

Thanks for the patch.

Pushed by robert.mader@posteo.de:
https://hg.mozilla.org/integration/autoland/rev/2d6138160450
[Wayland] fix FreeBSD/libc++ build by adding forgotten include to SurfacePoolWayland.h r=rmader
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: