Bug 1728014 - [Wayland] fix FreeBSD/libc++ build by adding forgotten include to SurfacePoolWayland.h r=rmader

Differential Revision: https://phabricator.services.mozilla.com/D123901